# aurora

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AURORA_DOCS.txt  COLOR_SCHEME_CHANGES.md  CONTRIBUTING.md  Generation.py  LICENSE  Makefile  OPTIMIZATION_SUMMARY.md  PERFORMANCE_GUIDE.md  PreTrainedResponses.py  README.md  agentic_handler.py  attachment_handler.py  aurora_config.json  aurora_system.py  bg.json  config.py  config_prod.py  conftest.py  desktop_agent.py  error_handler.py  gpu_check.py  health_check.py  image_gen.py  install_aurora.bat  installer.nsi  installer.py  logmanagement.py  lol.py  lol_backup.py  main.py  offline_sr_whisper.py  prompthandler.py  pyproject.toml  pytest.ini  quick_rag_setup.py  rag_db.json  (+20 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  test_coverage.md
.github/workflows/: ci.yml  tests.yml
SamosaGPT_Portable/: PreTrainedResponses.py  README.txt  hardware_optimizer.py  image_model_manager.py  main.py  offline_text2speech.py  prompthandler.py  security.py  setup.bat
SamosaGPT_Portable/streamlit_markdown_select/: __init__.py
SamosaGPT_Portable/streamlit_markdown_select/frontend/src/: index.css  index.tsx
aurora/: __init__.py
aurora/agents/: __init__.py  agentic_handler.py  desktop_agent.py  vision_agent.py
aurora/audio/: __init__.py  offline_sr_whisper.py  offline_text2speech.py
aurora/core/: Generation.py  __init__.py  aurora_system.py  config.py  config_prod.py  logmanagement.py
aurora/handlers/: __init__.py  attachment_handler.py  error_handler.py  prompthandler.py  rag_handler.py
aurora/models/: __init__.py  image_model_manager.py  video_model_manager.py
aurora/security/: __init__.py  health_check.py  security.py
aurora/ui/: __init__.py  image_gen.py  streamlit_app.py  video_gen.py
aurora/utils/: PreTrainedResponses.py  __init__.py  gpu_check.py  hardware_optimizer.py  user_preferences.py  ws.py
backup/: lol.py  lol_backup.py
data/: aurora_config.json  rag_db.json  sample_knowledge.txt
docs/: ACTION_ITEMS.md  API.md  ARCHITECTURE.md  AURORA_DOCS.md  AURORA_DOCS.txt  COLOR_SCHEME_CHANGES.md  CONFIG.md  CONTRIBUTING.md  FAQ.md  INSTALLATION.md  ISSUE_4_SUMMARY.md  REORGANIZATION_COMPLETE.md  TESTING.md  TESTING_SETUP_COMPLETE.md
scripts/: installer.nsi  installer.py  quick_rag_setup.py  run_console.bat  setup.bat  setup.ps1  setup_agentic.py  setup_aurora_rag.py  setup_testing.py
streamlit_markdown_select/frontend/: package.json
streamlit_markdown_select/frontend/public/: index.html
streamlit_markdown_select/frontend/src/: StreamlitMarkdownSelect.tsx  index.css
streamlit_markdown_select/frontend/src/components/: MarkdownSelect.tsx
streamlit_markdown_select/frontend/src/types/: MarkdownSelectTypes.ts
streamlit_navbar/: __init__.py
streamlit_navbar/frontend/: package.json
streamlit_navbar/frontend/public/: index.html
streamlit_navbar/frontend/src/: StreamlitNavbar.tsx  index.css  index.tsx  types.ts
streamlit_navbar/frontend/src/components/: Navbar.tsx
tests/: README.md  test_aurora_system.py  test_cords.py  test_rag.py
tests/unit/: test_rag_performance.py
